web-infras/parser/tests/fixtures/babel/es2015/uncategorised/123/output.txt
[SyntaxError]: super() is only valid in derived class constructors (1,41)
1|"use strict"; (class A {constructor() { super() }})
 |                                       ^
